# book-tool

./: .env.example  .gitignore  .gitlab-ci.yml  LICENSE  README.md  metadata.template.yml  pyproject.toml
docs/: google-books-api.md
src/book/: __main__.py  app.py  args.py  env.py
src/book/command/: fetch.py  google.py
src/book/common/: __init__.py  auto_repr.py
src/book/ebook/: __init__.py  ebook.py  ebook_identifier.py  ebook_image.py  ebook_meta.py
src/book/pack/: __init__.py  pack.py  unpack.py
src/book/utils/: __init__.py  fs_utils.py  ui_utils.py
tests/: test_files.py
tests/book/: test_book.py
tests/pack/: test_pack.py  test_unpack.py
