[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "book-cli"
version = "0.1.0"
dependencies = ["pyyaml", "dotenv"]
requires-python = ">=3.12"
readme = "README.md"
description = "Python CLI to handle books."
authors = [{ name = "Ewilan Rivière" }]

[project.scripts]
book-tool = "book.app:main"

[project.optional-dependencies]
dev = [
  "pytest>=7.0",
]
