[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "book-cli"
version = "0.1.0"
description = "Ultimate Python CLI to handle books."
readme = "README.md"
authors = [{ name = "Ewilan Rivière" }]
requires-python = ">=3.12"
classifiers = [
  "Programming Language :: Python :: 3",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
]

# uv run deptry .
# uv sync
# uv sync --extra dev
# uv export --format requirements-txt > requirements.txt
dependencies = [
  # https://pypi.org/project/EbookLib/
  "ebooklib", # import ebooklib (to handle .epub files)
  # https://pypi.org/project/google-api-python-client/
  "google-api-python-client", # import googleapiclient (to fetch Google Books API)
  # https://pypi.org/project/python-dotenv/
  "python-dotenv", # import dotenv (to handle .env variables)
  # https://pypi.org/project/rich/
  "rich", # import rich (help for debugging)
]

[project.scripts]
book-tool = "book.app:main"

[project.optional-dependencies]
dev = ["pytest~=8.0.0", "pytest-cov", "uv>=0.5.0"]

[tool.setuptools]
package-dir = { "" = "src" }

[tool.deptry]
known_first_party = ["book"]

[tool.deptry.per_rule_ignores]
DEP002 = ["pytest", "pytest-cov", "uv"]

[tool.deptry.package_module_name_map]
uv = "uv"

[dependency-groups]
dev = [
    "deptry>=0.25.1",
    "pytest-cov>=7.0.0",
]
